--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -305,6 +305,7 @@ $text-light: #8798ad;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
   background-color: #f8f8f8;
+  padding: 30px 23px;
   .performance-metric {
     text-align: center;
 
